# project-5-sparkle

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.css  app.html
frontend/src/lib/: CredentialsPanel.svelte  api.ts  prices.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
sparkle/: aws.py  cli.py
sparkle/server/: app.py
sparkle/tests/: test_api.py  test_aws.py
vantage/: aws.py  cli.py
vantage/server/: app.py
vantage/tests/: test_api.py  test_aws.py
