[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkle"
version = "0.1.0"
description = "AWS EC2 instance viewer — launch times, first-start history, and IAM ownership"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "rich>=13",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
sparkle = "sparkle.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "moto[ec2,cloudtrail]>=5.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["sparkle/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["sparkle/tests"]
